--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,3 +1,5 @@
+@import "./main/stylesheet.scss";
+
 @import "./main/reset";
 
 html {
@@ -43,7 +45,8 @@ html {
         color: #FFF;
         max-width: 800px;
         margin: 0 auto;
-        padding: 30px 0;
+        padding: 25px 0;
+        
     }
  
 
@@ -59,7 +62,7 @@ html {
     
 .btn {
     display: inline-block;
-    padding: 10px 25px;
+    padding: 10px 60px;
     background: #4985FF;
     color: #fff;
     text-decoration: none;
@@ -68,17 +71,21 @@ html {
 } 
 
 
+
+
 .nav {
 
     &__list {
         margin-left: auto;
+        max-width: 50%;
+        flex: 0 0 50%;
     } 
 
     &__item {
     display: inline-block;
     margin-top: 30px;
     margin-bottom: 30px;
-    margin-right: 30px;    
+    margin-right: 25px;    
     }
 
 
@@ -92,3 +99,198 @@ html {
 } 
 
 
+.second {
+
+    &__top {}
+
+    &__title {
+        font-size: 36px;
+        line-height: 53px;
+        text-align: center;
+        color: #323232;
+        max-width: 740px;
+        margin: 60px auto 0;
+    }
+
+    &__text {
+        font-size: 16px;
+        line-height: 25px;
+        text-align: center;
+        color: #999;
+        max-width: 730px;
+        margin: 40px auto 0;
+    }
+
+    &__btn {
+        text-align: center;
+        padding-top: 50px;
+}
+}
+.plans {
+
+padding-top: 100px;
+margin-bottom: 100px;
+    &__inner {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+}
+
+
+
+.plan {
+        display: flex;
+        max-width: 33%;
+        
+        &__logo {
+        text-align: center;
+    
+        }
+
+        &__circle1 {
+            border: 1px solid #4985FF;   
+            border-radius: 50%;
+            width: 90px;
+            height: 90px;
+            }
+
+        
+
+        &__circle2 {
+            border: 1px solid #E0E0E0;   
+            border-radius: 50%;
+            width: 110px;
+            height: 110px;
+     
+        }
+
+        &__img-wrap {
+     
+      
+        }
+
+        &__img {
+            max-width: 100%;
+            
+        }
+
+        &__content {
+            max-width: calc(100% - 50px);
+            flex: 0 0 calc(100% - 50px);
+            padding-left: 15px;
+        }
+
+        &__title {}
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 22px;
+        color: #000;
+
+        &__text {
+            font-size: 14px;
+            line-height: 22px;
+            color: #999;
+            font-weight: 400;
+            padding-top: 15px;
+            max-width: 220px;
+        }
+    }
+
+
+
+    .development {
+        background: #F6F6F8;
+        
+        &__about {
+            display: flex;
+        }
+
+        &__content {
+            max-width: 50%;
+        }
+
+        &__title {
+            font-weight: bold;
+            font-size: 36px;
+            line-height: 53px;
+            color: #323232;
+            padding-top: 150px;
+        }
+
+        &__text {
+            font-size: 16px;
+            line-height: 25px;
+            color: #999;
+            padding-top: 30px;
+            margin-bottom: 25px;
+        }
+
+        &__link {
+            font-size: 16px;
+            line-height: 20px;
+            color: #4985FF;
+        }
+
+        &__img-wrap {
+            padding-top: 100px;
+            margin-left: 120px;
+            max-width: 500px;
+            margin-bottom: 70px;
+        }
+
+        &__img {}
+
+    }
+
+    .line {
+        width: 1110px;
+        border: 1px solid #E0E0E0;        
+        padding: 0;
+
+    }
+
+
+
+    .projects {
+    margin: 0;
+    padding: 0;
+ 
+        &__inner {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            margin-top: 70px;
+            padding-bottom: 70px;
+        }
+    }
+
+     .project {
+        display: inline;
+
+        &__img-wrap {
+        display: flex;
+                }
+
+        &__img {}
+
+        &__count {
+            font-size: 36px;
+            line-height: 53px;
+            font-weight: normal;
+            color: #000;
+            padding-left: 15px;
+
+        }
+
+        &__text {
+            font-weight: normal;
+            font-size: 16px;
+            line-height: 25px;
+            color: #999;
+            padding: 0;
+        
+            
+        }
+    }
